tests/samples/negative/functions/missing_return_branch.ax
module missing_return_branch;

fn choose(flag: bool) -> i32 {
  if flag {
    return 1;
  }
}

fn main() -> i32 {
  return choose(true);
}
